// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconTile /> render corectly icon colors 1`] = `
<li
  className=""
>
  <p
    className=""
  >
    StoreLocation--Colors
  </p>
  <div
    className=""
  >
    <img
      alt="Store_StoreLocation--Colors_48px.svg"
      height="48px"
      src="/colorsvg/Store_StoreLocation--Colors_48px.svg"
      width="48px"
    />
  </div>
  <ul
    className=""
  >
    <li
      className=""
    >
      16px
    </li>
    <li
      className=""
    >
      24px
    </li>
    <li
      className=""
    >
      32px
    </li>
    <li
      className=""
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        48px
      </button>
    </li>
    <li
      className=""
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        64px
      </button>
    </li>
  </ul>
  <div
    className=""
    onClick={[Function]}
  >
    <p
      className=""
    >
      Svg file : 
      <br />
      Store_StoreLocation--Colors_48px.svg
    </p>
  </div>
</li>
`;

exports[`<IconTile /> render corectly monochrom icon 1`] = `
<li
  className=""
>
  <p
    className=""
  >
    Mobile
  </p>
  <div
    className=""
  >
    <svg
      aria-hidden="true"
      fill="#454545"
      height="48px"
      viewBox="0 0 48 48"
      width="48px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M32 7H16a2 2 0 00-2 2v30a2 2 0 002 2h16a2 2 0 002-2V9a2 2 0 00-2-2zm-1 3v22H17V10zM17 38v-4h14v4z"
      />
      <path
        d="M25 35h-2a1 1 0 000 2h2a1 1 0 000-2z"
      />
    </svg>
  </div>
  <ul
    className=""
  >
    <li
      className=""
    >
      16px
    </li>
    <li
      className=""
    >
      24px
    </li>
    <li
      className=""
    >
      32px
    </li>
    <li
      className=""
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        48px
      </button>
    </li>
    <li
      className=""
    >
      64px
    </li>
  </ul>
  <div
    className=""
    onClick={[Function]}
  >
    <p
      className=""
    >
      React/vue : 
      <br />
      Mobile48
    </p>
  </div>
  <div
    className=""
    onClick={[Function]}
  >
    <p
      className=""
    >
      Svg file : 
      <br />
      Device_Mobile_48px.svg
    </p>
  </div>
</li>
`;
